# MovieTheater

./: CMakeLists.txt  Command.h  CommandLine.cpp  MainActivity.cpp  main.cpp
GoogleTests/: AllTests.cpp  CMakeLists.txt  CommandMock.h  DummyMoviesViewModelTest.cpp  GetAllMovies.cpp  MainActivityTest.cpp  MovieSelectionMock.h  MoviesTheatersViewModelTest.cpp  ObserverMock.h  ReserveSeatsForMovieTheaterTest.cpp  SeatsProviderMock.h  SelectMovieTest.cpp
commands/: GetAllMovies.cpp  GetAllMovies.h  GetSeatsForMovieTheater.h  GetTheaterForMovie.h  ReserveSeatsForMovieTheater.h  SelectMovie.h  SelectTheater.h
database/: Database.h  Movie.h  MovieTheaterSeats.h  MovieTheaterSeatsDAO.h
viewModels/: DummyMoviesViewModel.h  MoviesTheatersViewModel.cpp  MoviesTheatersViewModel.h  Observer.cpp  Observer.h  Subject.cpp  Subject.h
